syntax = "proto3";
package transfer;

service Transfer {
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
  rpc GetFile(GetFileRequest) returns (GetFileResponse);
}

service Login {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message ListFilesRequest {
  string path = 1;
}

message ListFilesResponse {
  repeated string names = 1;
}

message GetFileRequest {
  string name = 1;
}

message GetFileResponse {
  string name = 1;
  bytes content = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
